# account-module

./: .env  Cargo.toml  Dockerfile  readme.md
src/: main.rs  mongo.rs
src/api/: account.rs  auth.rs  crypto.rs  fiat.rs  mod.rs  transaction.rs
src/bank/: bank.rs  mod.rs
src/currency/: currency.rs
src/domain/: account.rs  asset.rs  ledger.rs  mod.rs  transaction.rs  user.rs
src/domain/account/: account.rs
src/domain/asset/: asset.rs
src/domain/ledger/: ledger.rs  mod.rs
src/domain/transaction/: transaction.rs
src/dto/: deposit.rs  mod.rs  transaction.rs  user.rs
src/fairings/: auth.rs
src/response/: custom.rs  error.rs  mod.rs
src/security/: jwt.rs  permissions.rs
src/wallet/: wallet.rs
