[package]
name = "account-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rand = "0.8.5"
sha2 = "0.10.6"
mongodb = { version = "2.4.0", default-features = false, features = ["async-std-runtime"] }
async-trait = "0.1.68"
serde = "1.0.158"
async-std = "1.12.0"
tokio = "1.26.0"
