[package]
name = "account-module"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"]  }
dotenv = "0.15.0"
uuid = "1.3.1"
chrono = "0.4.24"
rand = "0.8.5"
sha2 = "0.10.6"
rand_core = { version = "0.6.4", features = ["std"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
mongodb = { version = "2.4.0", default-features = false, features = ["async-std-runtime"] }
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
revolt_rocket_okapi = { version = "0.9.1", features = ["swagger", "rapidoc"]  }
async-trait = "0.1.68"
serde = "1.0.159"
async-std = "1.12.0"
tokio = "1.27.0"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
